# asta-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  INTERNAL.md  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci-test.yml
astabench/evals/arxivdigestables/: task.py
astabench/evals/e2e_discovery/: task.py
astabench/evals/inspect_eval_wrappers/: core_bench.py
astabench/evals/labbench/litqa2/: task.py
astabench/evals/paper_finder/: relevance.py  task.py
astabench/evals/sqa/: retry_utils.py  rubric.py  task.py
astabench/tools/: asta_tools.py  paper_finder_ai2i.py
astabench/util/: sample.py
dev_dvc_logs/debug_logs/: .gitignore
docker/: Dockerfile
scripts/: arithmetic_solver.py  dedupe_eval_logs.py  eval_then_score.sh  inspect_score_with_task.py  recompute_citation_scores.py  rescore_judge_model_submissions.sh  rescore_progress.py  smoke_solve_score.sh
scripts/ci/: arithmetic_task.py  two_phase_smoke.yml
solvers/paper_finder/: pf_solver.py
solvers/scorer/: README.md  demo.sh  pyproject.toml  setup.sh
tests/: test_arithmetic_solver.py  test_arithmetic_task.py  test_import_without_keys.py  test_sqa_retry_utils.py
tests/tools/: test_asta_tools.py  test_native_provider_tools.py
