[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astabench-scorer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench",
    # Match the parent astabench pin so scoring and registry loading use the same Inspect.
    "inspect_ai==0.3.203",
]

[tool.uv.sources]
# Use local astabench code from this repository.
astabench = { path = "../..", editable = true }

[tool.uv]
# Override needed so the local astabench editable dependency resolves to the scorer pin.
override-dependencies = [
    "inspect_ai==0.3.203",
]
